--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!doctype html>
+<html>
+	<head>
+		<title> &lt;DECROSS&gt; </title> 
+		<style> #app {width=500px;height=700px; } </style>
+		<meta name='viewport' content='width=700px,initial-scale=1.0'>
+	</head>
+	<body>
+		<canvas id='app' width='500px' height='700px'></canvas>
+		<script type='text/javascript'src='app.js'> </script>
+	</body>
+</html>
 
